Use Stream.toList instead of collect